# task_manager

./: .flake8  .secrets.baseline  LICENSE  README.md  cli.html  cli.py  index.html  pyproject.toml  search.js  tasks.html
.github/workflows/: code-analysis.yml  publish-docs.yml  release.yml  test-matrix.yml
docs/: cli.html  index.html  search.js  tasks.html
docs/tasks/: manager.html  storage.html
docs/tutorials/: tutorial.md
tasks/: manager.html  manager.py  storage.html  storage.py
tests/: test_manager.py
