[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = "A Task Management System"
authors = ["Mohammed Aharrar Soulali"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tasks" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
